--- a/src/app/shared/form-controls/form-input-textarea/form-input-textarea.component.html
+++ b/src/app/shared/form-controls/form-input-textarea/form-input-textarea.component.html
@@ -4,7 +4,7 @@
   class="form__textarea"
   [rows]="rows"
   [formControl]="formControl"
-  [attr.maxlength]="maxLength"
+  [attr.maxLength]="maxLength"
   [placeholder]="placeholder | translate"></textarea>
 <div class="form__content-container">
   <app-form-input-error [errors]="formControl.errors" />
