--- a/src/app/views/auth/components/sign-in/sign-in.component.html
+++ b/src/app/views/auth/components/sign-in/sign-in.component.html
@@ -7,21 +7,7 @@
     width: '500px'
   }">
   <form class="form" [formGroup]="form">
-    <div class="form__field">
-      <input
-        type="text"
-        pInputText
-        formControlName="email"
-        tooltipPosition="top"
-        [style]="{ width: '100%' }"
-        [placeholder]="'FORM.EMAIL' | translate"
-        [pTooltip]="'FORM.EMAIL_TOOLTIP' | translate" />
-      <ng-container *ngIf="form.controls.email.touched">
-        <p-message *ngIf="form.controls.email.valid" severity="success" />
-        <p-message *ngIf="form.controls.email.invalid" severity="error" />
-      </ng-container>
-    </div>
-
+    <app-form-input-text class="form__field" formControlName="email" placeholder="FORM.EMAIL" [hintVisible]="true" />
     <div class="form__field">
       <p-password
         class="form__password"
