--- a/src/app/views/main/views/creators/views/creator-exam/creator-exam.component.html
+++ b/src/app/views/main/views/creators/views/creator-exam/creator-exam.component.html
@@ -10,14 +10,10 @@
   </header>
   <section class="form">
     <div class="form__container">
-      <app-form-input-text
-        formControlName="name"
-        placeholder="FORM.NAME"
-        [maxLength]="nameMaxLength"
-        [hintVisible]="true">
+      <app-form-input-text formControlName="name" placeholder="FORM.NAME" [maxLength]="nameMaxLength">
         <small hint>{{ form.controls.name.value.length }}/{{ nameMaxLength }}</small>
       </app-form-input-text>
-      <app-form-input-textarea formControlName="description" placeholder="FORM.DESCRIPTION" [hintVisible]="true">
+      <app-form-input-textarea formControlName="description" placeholder="FORM.DESCRIPTION">
         <small hint>{{ form.controls.description.value.length }}/{{ descriptionMaxLength }}</small>
       </app-form-input-textarea>
     </div>
