--- a/src/app/views/main/components/header/header.component.html
+++ b/src/app/views/main/components/header/header.component.html
@@ -1,9 +1,10 @@
 <p-menubar class="menu" [model]="menuItems">
   <ng-template pTemplate="end">
     <p-splitButton
+      *ngIf="user$ | async as user"
       icon="pi pi-user"
       styleClass="p-button-text p-button-secondary"
-      [label]="'NAME SURNAME'"
+      [label]="user | userNames"
       [model]="userBtnItems"
       (onClick)="goProfile()" />
   </ng-template>
