feat: handle displaying candidates list

--- a/src/app/views/main/views/users/candidates/candidates.component.html
+++ b/src/app/views/main/views/users/candidates/candidates.component.html
@@ -1,1 +1,7 @@
-<p>candidates works!</p>
+<app-list
+  heading="USERS.CANDIDATES_LIST_HEADING"
+  [columns]="columns"
+  [list]="list$ | async"
+  [listCallState]="listCallState$ | async"
+  [handleRowSelect]="true"
+  (rowSelect)="handleShowDetails($event)" />
