feat: add employee btn

--- a/src/app/views/main/views/users/employees/employees.component.html
+++ b/src/app/views/main/views/users/employees/employees.component.html
@@ -4,7 +4,9 @@
   [list]="list$ | async"
   [listCallState]="listCallState$ | async"
   [handleRowSelect]="true"
-  (rowSelect)="handleShowDetails($event)" />
+  (rowSelect)="handleShowDetails($event)">
+  <p-button styleClass="p-button-sm" [label]="'USERS.ADD_EMPLOYEE' | translate | uppercase" />
+</app-list>
 
 <app-employee-details-modal
   *ngIf="itemDetails"
