--- a/src/app/shared/components/list/list.component.html
+++ b/src/app/shared/components/list/list.component.html
@@ -4,7 +4,7 @@
       <ng-template *ngIf="heading" pTemplate="caption">
         <div class="list__caption-container">
           <p>{{ heading | translate }} ({{ list.quantity }})</p>
-          <ng-content />
+          <ng-container *ngTemplateOutlet="customCaptionContent" />
         </div>
       </ng-template>
       <ng-template pTemplate="header">
@@ -32,7 +32,7 @@
     <ng-template *ngIf="heading" pTemplate="caption">
       <div class="list__caption-container">
         <p>{{ heading | translate }}</p>
-        <ng-content />
+        <ng-container *ngTemplateOutlet="customCaptionContent" />
       </div>
     </ng-template>
     <ng-template pTemplate="header">
@@ -48,4 +48,8 @@
       </tr>
     </ng-template>
   </p-table>
+</ng-template>
+
+<ng-template #customCaptionContent>
+  <ng-content />
 </ng-template>
