--- a/src/styles/customs/_forms.scss
+++ b/src/styles/customs/_forms.scss
@@ -1,5 +1,5 @@
 .form {
-  gap: 3rem;
+  gap: 2rem;
 
   &__fields {
     display: flex;
@@ -9,14 +9,15 @@
   &__field {
     width: 100%;
 
-    &--radio, &--slider {
+    &--radio,
+    &--slider {
       display: flex;
       flex-direction: column;
-      gap: .5rem;
+      gap: 0.5rem;
     }
 
     &--slider {
-      gap: .7rem;
+      gap: 0.7rem;
     }
   }
 
@@ -34,6 +35,6 @@
 
   &__radio {
     display: flex;
-    gap: .5rem;
+    gap: 0.5rem;
   }
 }
