feat: handle displaying phone number

--- a/src/app/views/main/views/users/employees/components/employee-details-modal/employee-details-modal.component.html
+++ b/src/app/views/main/views/users/employees/components/employee-details-modal/employee-details-modal.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="detail">
         <p class="detail__label">{{ 'FIELD.PHONE' | translate }}</p>
-        <p class="detail__value">{{ 111222333 }}</p>
+        <p class="detail__value">{{ item.phone }}</p>
       </div>
     </div>
     <div class="modal__details-container">
