--- a/src/styles/configs/_colors.scss
+++ b/src/styles/configs/_colors.scss
@@ -11,17 +11,16 @@
 
 .junior {
   background-color: #2faf00;
-
 }
 
 .mid {
   background-color: #ffb200;
-
 }
 
 .senior {
   background-color: #ff0303;
-
 }
 
-
+.color-required {
+  color: #ff0000ff;
+}
