--- a/src/app/views/main/views/users/candidates/components/candidate-details-modal/candidate-details-modal.component.html
+++ b/src/app/views/main/views/users/candidates/components/candidate-details-modal/candidate-details-modal.component.html
@@ -15,7 +15,7 @@
       </div>
       <div class="detail">
         <p class="detail__label">{{ 'FIELD.PHONE' | translate }}</p>
-        <p class="detail__value">{{ 111222333 }}</p>
+        <p class="detail__value">{{ item.phone }}</p>
       </div>
     </div>
     <div class="modal__details-container">
@@ -26,6 +26,16 @@
       <div class="detail">
         <p class="detail__label">{{ 'FIELD.UPDATED_AT' | translate }}</p>
         <p class="detail__value">{{ item.updatedAt | date: dateFormat }}</p>
+      </div>
+    </div>
+    <div class="modal__details-container">
+      <div class="detail">
+        <p class="detail__label">{{ 'FIELD.LINK_GIT' | translate }}</p>
+        <p class="detail__value">{{ item.additionalInfo.gitRepoLink }}</p>
+      </div>
+      <div class="detail">
+        <p class="detail__label">{{ 'FIELD.RODO' | translate }}</p>
+        <p class="detail__value">{{ item.additionalInfo.acceptedRodo }}</p>
       </div>
     </div>
   </article>
