--- a/src/app/views/main/views/tasks/tasks.component.html
+++ b/src/app/views/main/views/tasks/tasks.component.html
@@ -1,1 +1,3 @@
-<p>tasks works!</p>
+<p-card *ngFor="let card of cardsMenu" class="card-btn" (click)="card.routerCommand()">
+  <h1>{{ card.label }}</h1>
+</p-card>
