feat: create task exam list

--- a/src/app/shared/components/question-detail-item/question-detail-item.component.html
+++ b/src/app/shared/components/question-detail-item/question-detail-item.component.html
@@ -1,6 +1,6 @@
 <div class="detail__header">
   <p class="detail__heading">{{ data.name }}</p>
-  <p-button type="button" icon="pi pi-times" (onClick)="remove.emit(data.id)" />
+  <p-button *ngIf="!readonly" type="button" icon="pi pi-times" (onClick)="remove.emit(data.id)" />
 </div>
 <p-divider />
 <div class="detail__content">
